fixed fullscreen image view alignment

--- a/modules/_viewers.scss
+++ b/modules/_viewers.scss
@@ -46,6 +46,11 @@
 	left: 0;
 	top: 0;
 	height: 40px;
+	padding: 0;
+	.controls{
+		line-height: 38px;
+		padding-right: 10px;
+	}
 }
 
 .fullscreen-viewer{
@@ -55,7 +60,10 @@
 	background: rgba(0,0,0,0.7);
 	top: 40px;
 	left: 0;
-	min-height: 100%;
+	min-height: calc(100% - 40px);
+	display: flex;
+    justify-content: center;
+    align-items: center;
 	.render{
 		margin-left: auto;
 		margin-right: auto;
